Reports Improvements, ManageSales bug fixes, Admin Improvements, Base SQL dump added for new installations

--- a/config.php.sample
+++ b/config.php.sample
@@ -1,6 +1,7 @@
 <?
 $AgencyParams = array();
 $AgencyParams["DistributorNumber"] = "12345678";
+$AgencyParams["AgencyName"]	   = "My Agency Name";
 
 $dbuser = "NexusDevAccount";
 $dbpass = "abc123^";
